--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <!-- Navbar -->
     <nav class="navbar">
       <a href="#" class="navbar-logo"><span>Burger</span>Top.</a>
-
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
@@ -45,6 +44,7 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
+      <div class="mask-container">
       <main class="content">
         <h1>Everyone Can <span>Enjoy Hamburger</span></h1>
         <p>
@@ -53,7 +53,9 @@
         </p>
         <a href="#" class="abc">Ayo Cobain Sekarang!!!</a>
       </main>
+      </div>
     </section>
+    <!-- <a href="#" clas="abc">Ayo Cobain Sekarang!!!</a> -->
     <!-- End Hero Section -->
 
     <!-- About Section -->
@@ -77,6 +79,12 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit,
             reiciendis.
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Dignissimos, magnam numquam odio dolor sequi alias accusamus nihil
+            atque odit doloribus tenetur eum, earum delectus sapiente beatae
+            provident consequuntur qui nobis.
           </p>
         </div>
       </div>
